--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "@antv/g6": "^4.8.21",
     "@ckeditor/ckeditor5-build-classic": "^41.4.2",
     "@ckeditor/ckeditor5-vue2": "^3.0.1",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/vue-fontawesome": "^2.0.10",
     "axios": "^1.7.2",
     "core-js": "^3.8.3",
     "d3": "^7.9.0",
