最新版更新，增加了社群的前端并对之前的前端进行了优化

--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/vue-fontawesome": "^2.0.10",
+    "@stomp/stompjs": "^7.1.1",
     "axios": "^1.7.2",
     "core-js": "^3.8.3",
     "d3": "^7.9.0",
+    "echarts": "^5.6.0",
+    "sockjs-client": "^1.6.1",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vue-vis": "^1.0.0",
